--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -1,2 +1,10 @@
-@charset "UTF-8";
+@charset "utf-8";
 @namespace epub "http://www.idpf.org/2007/ops";
+span[epub|type~="subtitle"]{
+	display: block;
+	font-weight: normal;
+}
+p span.i1{
+	text-indent: -1em;
+	padding-left: 2em;
+}
